# discord-bot

./: .env.sample  .gitignore  README.md  main.py  pyproject.toml  requirements.txt
contexts/: context.txt
lib/: client.py  context.py  server.py
